--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>My Favourite Hobby || Vansh Mohan</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
         <style>
             body{
                 background: linear-gradient(45deg,yellow,yellow,lightgreen,lightgreen,green,green,darkgreen,darkgreen);
@@ -15,11 +17,27 @@
                 font-family: monospace;
             }
             h1,h2,h3{
-                font-family: fantasy;
+                font-family: 'Train One', cursive;
+            }
+            .menu{
+                list-style: none;
+                font-family: cursive;
+                float: right;
+                position: absolute;
+                top: 10px;
+                right: 30px;
+                cursor: pointer;
             }
         </style>
     </head>
     <body>
+        <ul class="menu">
+            <li class="link">About</li>
+            <li class="link">My Favorite hobby</li>
+            <li class="link">My Work</li>
+            <li class="link">My Inspiration</li>
+            <li class="link">Contact</li>
+        </ul>
         <h1>My Favourite Hobby</h1><br>
         <h2>CODING</h2><br><br><br>
         <p>My favourite hobby is coding and making <br>websites and apps like this one. Coding is a lot of fun. By coding I built a <br><b><a href="https://vanshman.github.io/Vanshsongsite.github.io/vanshsongsite.html">Songsite</a>, <a href="https://v2codecomp.github.io/Invitation_maker.com/Invitation_card_maker.html">Invitation maker</a></b> and even my on <b><a href="https://vanshman.github.io/vc/index">WhatsApp named V2chatter</a></b><br> I hope you liked my sites. I have even more.</p><br><br><br><br><br><br><br><br><br><br><br><br><br>
