--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="#contact"><li class="link">Contact Me</li></a>
             </ul>
         </center><br><br>
-        <section id="about"><br>
+        <section id="about"><br><br><br>
             <h1>About Me</h1>
             <p>My Name is Vansh Mohan. I am an 11 year old kid. I study in class 7. </p>
         </section><br><br>
