--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             body{
                 background: linear-gradient(45deg,yellow,yellow,lightgreen,lightgreen,green,green,darkgreen,darkgreen);
                 text-align: center;
+                margin: 0;
+                padding: 0;
             }
             a{
                 color: red;
