--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section id="contact">
             <h1>Contact Me</h1>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497699.9973874144!2d77.35074421903857!3d12.95384772557775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1617718973344!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <p>You can contact me through my <i class="fa fa envelope"></i><a href="mailto:vanshsneakatksqd@gmail.com">email</a></p>
+            <p>You can contact me through my <i class="fa fa-envelope"></i><a href="mailto:vanshsneakatksqd@gmail.com">email</a></p>
         </section>
         <br><br><br><br><br><br><br><br><br><br><br><br><br>
         <h3>Thank you!</h3>
